# identy-service/docs/swagger.json
@@ -35,6 +35,11 @@
         },
         "/iam/accounts/{accountId}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Получение данных аккаунта по ID",
                 "produces": [
                     "application/json"
@@ -63,6 +68,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Мягкое удаление аккаунта",
                 "produces": [
                     "application/json"
@@ -83,6 +93,11 @@
                 "responses": {}
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Частичное обновление данных аккаунта",
                 "consumes": [
                     "application/json"
@@ -124,6 +139,11 @@
         },
         "/iam/accounts/{accountId}/lock": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Блокировка аккаунта администратором",
                 "consumes": [
                     "application/json"
@@ -165,6 +185,11 @@
         },
         "/iam/accounts/{accountId}/password": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Смена пароля для аккаунта",
                 "consumes": [
                     "application/json"
@@ -221,6 +246,11 @@
         },
         "/iam/accounts/{accountId}/sessions": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Получение списка сессий аккаунта",
                 "produces": [
                     "application/json"
@@ -243,6 +273,11 @@
         },
         "/iam/accounts/{accountId}/sessions/{sessionId}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Завершение сессии (для админа или владельца)",
                 "produces": [
                     "application/json"
@@ -272,6 +307,11 @@
         },
         "/iam/accounts/{accountId}/unlock": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Разблокировка аккаунта администратором",
                 "produces": [
                     "application/json"
